apps/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      enableServiceLinks: false
      containers:
        - name: linkding
          image: sissbruecker/linkding:latest-alpine
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: data
              mountPath: /etc/linkding/data
          resources:
            limits:
              memory: 512Mi
              cpu: "250m"
            requests:
              memory: 128Mi
              cpu: "10m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: linkding-data
